--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ h1 {
 
 .challenge-row {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 77px;
@@ -65,14 +66,46 @@ p {
     font-weight: 600;
     line-height: 1.5;
     width: 56%;
+    min-width: 300px
 }
 
 .challenge-row:nth-child(even) p {
     width: 70%;
+    min-width: 250px
 }
 
 span {
     margin: 0;
     padding: 0;
     margin-bottom: 20px;
+}
+
+@media only screen and (max-width:555px) {
+    .challenge-image {
+        display: flex;
+        width: 100%;
+        height: 345px;
+        border-radius: 16px;
+        background: var(--white, #F1F1FB);
+    }
+
+    .challenge-details {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+        width: 100%;
+        height: 100%;
+        padding: 0 20px;
+    }
+
+    p {
+        margin: 0;
+        padding: 0;
+        font-size: 18px;
+        font-weight: 600;
+        line-height: 1.5;
+        width: 100%;
+        min-width: 300px
+    }
 }
