--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,13 @@ h1 {
     height: 345px;
     border-radius: 16px;
     background: var(--white, #F1F1FB);
+    cursor: pointer;
+}
+img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 16px;
 }
 
 .challenge-details {
